--- a/package.json
+++ b/package.json
@@ -22,11 +22,11 @@
     "npm": "^6.1.0",
     "popper.js": "^1.12.9",
     "vue": "^2.5.2",
-    "tb-vue-auth": "1.0.0",
-    "tb-vue-hash-router": "1.0.2",
-    "tb-vue-http": "1.0.1",
-    "tb-vue-i18n": "1.0.5",
-    "tb-vue-notifications": "1.0.6"
+    "tb-vue-auth": "^1.0.0",
+    "tb-vue-hash-router": "^1.0.2",
+    "tb-vue-http": "^1.0.1",
+    "tb-vue-i18n": "^1.0.5",
+    "tb-vue-notifications": "^1.0.6"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
