--- a/package.json
+++ b/package.json
@@ -18,21 +18,22 @@
     "@fortawesome/vue-fontawesome": "0.0.22",
     "bootstrap": "^4.0.0-beta.2",
     "bootstrap-vue": "latest",
+    "hellojs": "^1.18.1",
     "lodash": "^4.17.10",
     "npm": "^6.1.0",
     "popper.js": "^1.12.9",
-    "vue": "^2.5.2",
     "tb-vue-auth": "^1.0.0",
     "tb-vue-hash-router": "^1.0.2",
     "tb-vue-http": "^1.0.5",
     "tb-vue-i18n": "^1.0.5",
-    "tb-vue-notifications": "^1.0.6"
+    "tb-vue-notifications": "^1.0.6",
+    "vue": "^2.5.2"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
     "babel-core": "^6.22.1",
     "babel-loader": "^7.1.1",
-    "babel-plugin-istanbul": "^4.1.1",
+    "babel-plugin-istanbul": "^5.1.1",
     "babel-plugin-transform-runtime": "^6.22.0",
     "babel-preset-env": "^1.3.2",
     "babel-preset-stage-2": "^6.22.0",
@@ -50,9 +51,9 @@
     "file-loader": "^0.11.1",
     "friendly-errors-webpack-plugin": "^1.1.3",
     "html-webpack-plugin": "^2.28.0",
-    "http-proxy-middleware": "^0.17.3",
+    "http-proxy-middleware": "^0.19.1",
     "inject-loader": "^3.0.0",
-    "karma": "^1.4.1",
+    "karma": "^4.0.0",
     "karma-chrome-launcher": "^2.2.0",
     "karma-coverage": "^1.1.1",
     "karma-mocha": "^1.3.0",
@@ -62,7 +63,7 @@
     "karma-sourcemap-loader": "^0.3.7",
     "karma-spec-reporter": "0.0.31",
     "karma-webpack": "^2.0.2",
-    "mocha": "^3.2.0",
+    "mocha": "^6.0.0",
     "opn": "^5.1.0",
     "optimize-css-assets-webpack-plugin": "^2.0.0",
     "ora": "^1.2.0",
@@ -73,7 +74,7 @@
     "shelljs": "^0.7.6",
     "sinon": "^2.1.0",
     "sinon-chai": "^2.8.0",
-    "url-loader": "^0.5.8",
+    "url-loader": "^1.1.2",
     "vue-loader": "^13.0.4",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.4.2",
