--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "npm": "^6.1.0",
     "popper.js": "^1.12.9",
     "tb-vue-auth": "^1.0.0",
+    "tb-vue-facebook-login": "^1.0.1",
     "tb-vue-google-login": "^1.0.11",
     "tb-vue-hash-router": "^1.0.2",
     "tb-vue-http": "^1.0.12",
