--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tb-vue-boilerplate",
-  "version": "1.0.1",
-  "description": "A Vue.js project",
+  "version": "2.0.1",
+  "description": "A Vue.js boilerplate",
   "author": "TBalint19 <tbalint19.prof@gmail.com>",
   "private": true,
   "scripts": {
@@ -12,24 +12,16 @@
     "test": "npm run unit"
   },
   "dependencies": {
-    "@fortawesome/fontawesome": "^1.1.5",
-    "@fortawesome/fontawesome-free-brands": "^5.0.9",
-    "@fortawesome/fontawesome-free-solid": "^5.0.9",
-    "@fortawesome/vue-fontawesome": "0.0.22",
+    "axios": "^0.18.0",
     "bootstrap": "^4.0.0-beta.2",
     "bootstrap-vue": "latest",
-    "hellojs": "^1.18.1",
     "lodash": "^4.17.10",
-    "npm": "^6.1.0",
-    "popper.js": "^1.12.9",
-    "tb-vue-auth": "^1.0.0",
-    "tb-vue-facebook-login": "^1.0.2",
-    "tb-vue-google-login": "^1.0.11",
-    "tb-vue-hash-router": "^1.0.2",
-    "tb-vue-http": "^1.0.12",
-    "tb-vue-i18n": "^1.0.5",
-    "tb-vue-notifications": "^1.0.6",
-    "vue": "^2.5.2"
+    "vue": "^2.5.2",
+    "vue-awesome": "^3.5.1",
+    "vue-i18n": "^8.11.1",
+    "vue-notification": "^1.3.16",
+    "vue-router": "^3.0.6",
+    "vuex": "^3.1.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
