--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bootstrap": "^4.0.0-beta.2",
     "bootstrap-vue": "latest",
     "lodash": "^4.17.10",
+    "velocity-animate": "^2.0.5",
     "vue": "^2.5.2",
     "vue-awesome": "^3.5.1",
     "vue-i18n": "^8.11.1",
