--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "vue-i18n": "^8.11.1",
     "vue-notification": "^1.3.16",
     "vue-router": "^3.0.6",
+    "vue-touch": "^2.0.0-beta.4",
     "vuex": "^3.1.0"
   },
   "devDependencies": {
