--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "vuex": "^3.1.0"
   },
   "devDependencies": {
+    "@vue/test-utils": "^1.0.0-beta.29",
     "autoprefixer": "^7.1.2",
     "axios-mock-adapter": "^1.16.0",
     "babel-core": "^6.22.1",
