--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "test": "npm run unit"
   },
   "dependencies": {
-    "axios": "^0.18.0",
+    "axios": ">=0.19.0",
     "bootstrap": "^4.0.0-beta.2",
     "bootstrap-vue": "latest",
     "lodash": "^4.17.10",
@@ -50,6 +50,7 @@
     "html-webpack-plugin": "^2.28.0",
     "http-proxy-middleware": "^0.19.1",
     "inject-loader": "^3.0.0",
+    "jsonwebtoken": "^8.5.1",
     "karma": "^4.0.0",
     "karma-chrome-launcher": "^2.2.0",
     "karma-coverage": "^1.1.1",
