--- a/package.json
+++ b/package.json
@@ -2,14 +2,17 @@
   "name": "tb-vue-boilerplate",
   "version": "2.0.1",
   "description": "A Vue.js boilerplate",
-  "author": "TBalint19 <tbalint19.prof@gmail.com>",
+  "author": "TBalint19 <tothbalint719@gmail.com>",
   "private": true,
   "scripts": {
     "dev": "node build/dev-server.js",
     "start": "node build/dev-server.js",
     "build": "node build/build.js",
     "unit": "cross-env BABEL_ENV=test karma start test/karma.conf.js --single-run",
-    "test": "npm run unit"
+    "test": "npm run unit",
+    "mutate": "./node_modules/@stryker-mutator/core/bin/stryker run",
+    "coverage-report": "./node_modules/http-server/bin/http-server ./reports/coverage/lcov-report/ --cors -a localhost -p 8088",
+    "mutation-report": "./node_modules/http-server/bin/http-server ./reports/mutation/html/ --cors -a localhost -p 8089"
   },
   "dependencies": {
     "axios": ">=0.19.0",
@@ -54,6 +57,7 @@
     "friendly-errors-webpack-plugin": "^1.1.3",
     "html-webpack-plugin": "^2.28.0",
     "http-proxy-middleware": "^0.19.1",
+    "http-server": "^0.11.1",
     "inject-loader": "^3.0.0",
     "jsonwebtoken": "^8.5.1",
     "karma": "^4.0.0",
