--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,5 +1,11 @@
 {
+  "printWidth": 80,
   "trailingComma": "es5",
-  "tabWidth": 4,
-  "semi": false
+  "tabWidth": 2,
+  "semi": false,
+  "bracketSpacing": true,
+  "singleQuote": true,
+  "quoteProps": "as-needed",
+  "jsxBracketSameLine": true,
+  "arrowParens": "always"
 }
