--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "tests": "npm run unit-tests && npm run store-tests",
     "mutate": "./node_modules/@stryker-mutator/core/bin/stryker run",
     "mutation-report": "./node_modules/http-server/bin/http-server ./reports/mutation/html/ --cors -a localhost -p 8089",
-    "format": "./node_modules/.bin/prettier --write 'src/**/*'",
-    "format-check": "./node_modules/.bin/prettier --check 'src/**/*.js'"
+    "format": "./node_modules/.bin/prettier --write '{src,static,test}/**/*'",
+    "format-check": "./node_modules/.bin/prettier --check '{src,static,test}/**/*'"
   },
   "dependencies": {
     "axios": ">=0.19.0",
