--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "mutate": "./node_modules/@stryker-mutator/core/bin/stryker run",
     "mutation-report": "./node_modules/http-server/bin/http-server ./reports/mutation/html/ --cors -a localhost -p 8089",
     "format": "./node_modules/.bin/prettier --write '{src,static,test}/**/*'",
-    "format-check": "./node_modules/.bin/prettier --check '{src,static,test}/**/*'"
+    "format-check": "./node_modules/.bin/prettier --check '{src,static,test}/**/*'",
+    "sonar": "node sonar.js"
   },
   "dependencies": {
     "axios": ">=0.19.0",
