--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "shelljs": "^0.7.6",
     "sinon": "^2.1.0",
     "sinon-chai": "^2.8.0",
+    "sonarqube-scanner": "^2.4.1",
     "url-loader": "^1.1.2",
     "vue-loader": "^13.0.4",
     "vue-style-loader": "^3.0.1",
