valid sonar message

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tb-vue-boilerplate",
+  "name": "vue-frontend-kitchensink-app",
   "version": "2.0.1",
   "description": "A Vue.js boilerplate",
   "author": "TBalint19 <tothbalint719@gmail.com>",
