--- a/package.json
+++ b/package.json
@@ -7,17 +7,19 @@
   "scripts": {
     "dev": "node build/dev-server.js",
     "start": "node build/dev-server.js",
-    "build": "node build/build.js",
+    "format": "./node_modules/.bin/prettier --write '{src,static,test}/**/*'",
+    "format-check": "./node_modules/.bin/prettier --check '{src,static,test}/**/*'",
     "unit-tests": "cross-env BABEL_ENV=test karma start test/unit/karma.conf.js --single-run",
     "unit-coverage": "./node_modules/http-server/bin/http-server ./reports/coverage/unit/lcov-report/ --cors -a localhost -p 8088",
     "store-tests": "cross-env BABEL_ENV=test karma start test/store/karma.conf.js --single-run",
     "store-coverage": "./node_modules/http-server/bin/http-server ./reports/coverage/store/lcov-report/ --cors -a localhost -p 8088",
     "tests": "npm run unit-tests && npm run store-tests",
+    "coverage-check": "node scripts/coverage.js",
     "mutate": "./node_modules/@stryker-mutator/core/bin/stryker run",
     "mutation-report": "./node_modules/http-server/bin/http-server ./reports/mutation/html/ --cors -a localhost -p 8089",
-    "format": "./node_modules/.bin/prettier --write '{src,static,test}/**/*'",
-    "format-check": "./node_modules/.bin/prettier --check '{src,static,test}/**/*'",
-    "sonar": "node sonar.js"
+    "mutate-kill-rate-check": "node scripts/mutateRate.js",
+    "sonar-check": "node scripts/sonar.js",
+    "build": "node build/build.js"
   },
   "dependencies": {
     "axios": ">=0.19.0",
@@ -69,6 +71,7 @@
     "karma": "^4.0.0",
     "karma-chrome-launcher": "^2.2.0",
     "karma-coverage": "^1.1.1",
+    "karma-coverage-istanbul-reporter": "^2.0.5",
     "karma-mocha": "^1.3.0",
     "karma-phantomjs-launcher": "^1.0.2",
     "karma-phantomjs-shim": "^1.4.0",
@@ -106,5 +109,29 @@
     "> 1%",
     "last 2 versions",
     "not ie <= 8"
-  ]
+  ],
+  "pipeline": {
+    "coverage": {
+      "util": {
+        "lines": 80,
+        "statements": 80,
+        "functions": 80,
+        "branches": 80
+      },
+      "store": {
+        "lines": 80,
+        "statements": 80,
+        "functions": 80,
+        "branches": 80
+      }
+    },
+    "mutates": {
+      "killRate": 100
+    },
+    "sonar": {
+      "url": "http://172.17.64.60:9004",
+      "maxIssues": 10,
+      "maxDuplications": 0
+    }
+  }
 }
