--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "format": "./node_modules/.bin/prettier --write '{src,static,test}/**/*'",
     "format-check": "./node_modules/.bin/prettier --check '{src,static,test}/**/*'",
     "unit-tests": "cross-env BABEL_ENV=test karma start test/unit/karma.conf.js --single-run",
-    "unit-coverage": "./node_modules/http-server/bin/http-server ./reports/coverage/unit/lcov-report/ --cors -a localhost -p 8088",
+    "unit-coverage-ui": "./node_modules/http-server/bin/http-server ./reports/coverage/unit/lcov-report/ --cors -a localhost -p 8088",
     "store-tests": "cross-env BABEL_ENV=test karma start test/store/karma.conf.js --single-run",
-    "store-coverage": "./node_modules/http-server/bin/http-server ./reports/coverage/store/lcov-report/ --cors -a localhost -p 8088",
+    "store-coverage-ui": "./node_modules/http-server/bin/http-server ./reports/coverage/store/lcov-report/ --cors -a localhost -p 8088",
     "tests": "npm run unit-tests && npm run store-tests",
     "coverage-check": "node CI/scripts/coverage.js",
     "mutate": "./node_modules/@stryker-mutator/core/bin/stryker run",
