sanitized branch name

--- a/CI/Jenkinsfile
+++ b/CI/Jenkinsfile
@@ -80,7 +80,12 @@ def validateTestCases() {
 
 def sonar(String branch) {
   stage('Static code analysis') {
-    sh "npm --branch=${branch} run sonar-check"
+    def jobName = "${env.JOB_NAME}"
+    def localBranch = branch.replaceFirst("origin/", "")
+    def sonarBranchKey = localBranch
+    def project = sonarBranchKey == "master" ? jobName : "${jobName}:${sonarBranchKey}"
+    def sanitizedSonarProjectName = project.replaceAll("/", "-")
+    sh "npm --branch=${sanitizedSonarProjectName} run sonar-check"
   }
 }
 
