--- a/CI/Jenkinsfile
+++ b/CI/Jenkinsfile
@@ -6,15 +6,15 @@ node('linux') {
   commitHash = checkout(scm).GIT_COMMIT
 
   try {
-      checkEnv()
-      checkout()
-      installDependencies()
-      checkCodeFormat()
-      runUnitTests()
-      runStoreTests()
-      checkCoverage()
-      validateTestCases()
-      sonar(branch)
+      // checkEnv()
+      // checkout()
+      // installDependencies()
+      // checkCodeFormat()
+      // runUnitTests()
+      // runStoreTests()
+      // checkCoverage()
+      // validateTestCases()
+      // sonar(branch)
       build()
       sendNotifications("SUCCESS")
   } catch (e) {
@@ -81,10 +81,15 @@ def validateTestCases() {
 def sonar(String branch) {
   stage('Static code analysis') {
     def jobName = "${env.JOB_NAME}"
+    echo "${jobName}"
     def localBranch = branch.replaceFirst("origin/", "")
+    echo "${localBranch}"
     def sonarBranchKey = localBranch
+    echo "${sonarBranchKey}"
     def project = sonarBranchKey == "master" ? jobName : "${jobName}:${sonarBranchKey}"
+    echo "${project}"
     def sanitizedSonarProjectName = project.replaceAll("/", "-")
+    echo "${sanitizedSonarProjectName}"
     sh "npm --branch=${sanitizedSonarProjectName} run sonar-check"
   }
 }
