--- a/CI/Jenkinsfile
+++ b/CI/Jenkinsfile
@@ -1,9 +1,18 @@
 #!usr/bin/env groovy
+import org.jenkinsci.plugins.pipeline.modeldefinition.Utils
 
-node('linux') {
+node('linux && docker') {
 
   branch = checkout(scm).GIT_BRANCH
   commitHash = checkout(scm).GIT_COMMIT
+  projectName = sanitizeProjectName(branch)
+  versionedProjectName = "${projectName}:${env.BUILD_ID}"
+
+  sh "echo Branch: ${branch}"
+  sh "echo Commit hash: ${commitHash}"
+  sh "echo Project name: ${projectName}"
+  sh "echo Build id: ${env.BUILD_ID}"
+  sh "echo Building ${env.versionedProjectName}"
 
   try {
       checkEnv()
@@ -14,15 +23,26 @@ node('linux') {
       runStoreTests()
       checkCoverage()
       validateTestCases()
-      sonar(branch)
+      sonar(projectName)
       build()
+      dockerize(versionedProjectName)
+      artifactoryUpload(projectName, versionedProjectName)
       sendNotifications("SUCCESS")
   } catch (e) {
       echo 'Build failed with error: ' + e.toString()
       sendNotifications("FAILURE")
   } finally {
-      cleanUp()
+
   }
+}
+
+def sanitizeProjectName(String branch) {
+  def jobName = "${env.JOB_NAME}"
+  def localBranch = branch.replaceFirst("origin/", "")
+  def sonarBranchKey = localBranch
+  def project = sonarBranchKey == "master" ? jobName : "${jobName}:${sonarBranchKey}"
+  def sanitizedSonarProjectName = project.replaceAll("/", "-")
+  return sanitizedSonarProjectName
 }
 
 def checkout() {
@@ -78,14 +98,9 @@ def validateTestCases() {
   }
 }
 
-def sonar(String branch) {
+def sonar(String projectName) {
   stage('Static code analysis') {
-    def jobName = "${env.JOB_NAME}"
-    def localBranch = branch.replaceFirst("origin/", "")
-    def sonarBranchKey = localBranch
-    def project = sonarBranchKey == "master" ? jobName : "${jobName}:${sonarBranchKey}"
-    def sanitizedSonarProjectName = project.replaceAll("/", "-")
-    sh "npm --branch=${sanitizedSonarProjectName} run sonar-check"
+    sh "npm --branch=${projectName} run sonar-check"
   }
 }
 
@@ -95,9 +110,21 @@ def build() {
   }
 }
 
-def cleanUp() {
-  stage('Cleanup') {
-    sh 'rm -rf ./node_modules'
+def dockerize(String versionedProjectName) {
+  stage('Dockerize') {
+    sh "docker build . -t ${versionedProjectName}"
+  }
+}
+
+def artifactoryUpload(String projectName, String versionedProjectName) {
+  stage('Upload to artifactory') {
+    if (isMaster(branch)) {
+      def registry = "repository.vodafone.hu/docker-nma"
+      sh "docker tag ${versionedProjectName} ${registry}/${projectName}"
+      sh "docker push ${registry}/${projectName}"
+    } else {
+      Utils.markStageSkippedForConditional(env.STAGE_NAME)
+    }
   }
 }
 
@@ -106,8 +133,7 @@ def sendNotifications(String status) {
     notifyBitbucket()
 }
 
-def notifyBitbucket(String state) {
-
+def notifyBitbucket() {
     notifyBitbucket commitSha1: $ { commitHash },
             credentialsId: '1af21bbb-b246-42b8-adf0-2c9df8698240',
             disableInprogressNotification: false,
@@ -117,4 +143,9 @@ def notifyBitbucket(String state) {
             prependParentProjectKey: false,
             projectKey: '',
             stashServerBaseUrl: 'http://itdevcrepo2:7990'
+}
+
+def isMaster(String branch) {
+    def localBranch = branch.replaceFirst("origin/", "")
+    localBranch == "master"
 }
