--- a/CI/Jenkinsfile
+++ b/CI/Jenkinsfile
@@ -115,8 +115,8 @@ def artifactoryUpload(String projectName) {
   stage('Upload to artifactory') {
     if (isMaster(branch)) {
       def registry = "repository.vodafone.hu/docker-nma"
-      sh "docker tag ${projectName} ${registry}/${projectName}"
-      sh "docker push ${registry}/${projectName}:${env.BUILD_ID}"
+      sh "docker tag ${projectName} ${registry}/${projectName}:${env.BUILD_ID}"
+      sh "docker push ${registry}/${projectName}"
     } else {
       Utils.markStageSkippedForConditional(env.STAGE_NAME)
     }
