--- a/CD/nginx.conf
+++ b/CD/nginx.conf
@@ -15,7 +15,7 @@ http {
   sendfile        on;
   keepalive_timeout  65;
   server {
-    listen       80;
+    listen       18000 default_server;
     server_name  localhost;
     location / {
       root   /app;
