--- a/CD/app_server.conf
+++ b/CD/app_server.conf
@@ -2,4 +2,7 @@ server {
   listen 0.0.0.0:18000;
   root /appDir;
   index index.htm index.html;
+  location / {
+    try_files $uri $uri/ /index.html?$args;
+  }
 }
