--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "TBalint19 <tothbalint719@gmail.com>",
   "private": true,
   "scripts": {
+    "gen": "node tools/generate.js",
     "dev": "node build/dev-server.js",
     "start": "node build/dev-server.js",
     "format": "./node_modules/.bin/prettier --write '{src,static,test}/**/*'",
@@ -63,6 +64,7 @@
     "extract-text-webpack-plugin": "^2.0.0",
     "file-loader": "^0.11.1",
     "friendly-errors-webpack-plugin": "^1.1.3",
+    "generate-template-files": "^2.2.0",
     "html-webpack-plugin": "^2.28.0",
     "http-proxy-middleware": "^0.19.1",
     "http-server": "^0.11.1",
