--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "TBalint19 <tothbalint719@gmail.com>",
   "private": true,
   "scripts": {
-    "gen": "node tools/generate.js",
+    "gen": "node codegen/generate.js",
     "dev": "node build/dev-server.js",
     "start": "node build/dev-server.js",
     "format": "./node_modules/.bin/prettier --write '{src,static,test}/**/*'",
