--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "axios": ">=0.19.0",
     "bootstrap": "^4.0.0-beta.2",
     "bootstrap-vue": "latest",
+    "epic-spinners": "^1.1.0",
     "lodash": ">=4.17.15",
     "request": "^2.88.0",
     "velocity-animate": "^2.0.5",
