--- a/package.json
+++ b/package.json
@@ -8,16 +8,16 @@
     "gen": "node codegen/generate.js",
     "dev": "node build/dev-server.js",
     "start": "node build/dev-server.js",
-    "format": "./node_modules/.bin/prettier --write '{src,static,test}/**/*'",
-    "format-check": "./node_modules/.bin/prettier --check '{src,static,test}/**/*'",
+    "format": "cross-env ./node_modules/.bin/prettier --write '{src,static,test}/**/*'",
+    "format-check": "cross-env ./node_modules/.bin/prettier --check '{src,static,test}/**/*'",
     "unit-tests": "cross-env BABEL_ENV=test karma start test/unit/karma.conf.js --single-run",
-    "unit-coverage-ui": "./node_modules/http-server/bin/http-server ./reports/coverage/util/lcov-report/ --cors -a localhost -p 8088",
+    "unit-coverage-ui": "cross-env ./node_modules/http-server/bin/http-server ./reports/coverage/util/lcov-report/ --cors -a localhost -p 8088",
     "store-tests": "cross-env BABEL_ENV=test karma start test/store/karma.conf.js --single-run",
-    "store-coverage-ui": "./node_modules/http-server/bin/http-server ./reports/coverage/store/lcov-report/ --cors -a localhost -p 8088",
+    "store-coverage-ui": "cross-env ./node_modules/http-server/bin/http-server ./reports/coverage/store/lcov-report/ --cors -a localhost -p 8088",
     "tests": "npm run unit-tests && npm run store-tests",
-    "coverage-check": "node CI/scripts/coverage.js",
-    "mutate": "./node_modules/@stryker-mutator/core/bin/stryker run",
-    "mutation-report-ui": "./node_modules/http-server/bin/http-server ./reports/mutation/html/ --cors -a localhost -p 8089",
+    "coverage-check": "cross-env node CI/scripts/coverage.js",
+    "mutate": "cross-env ./node_modules/@stryker-mutator/core/bin/stryker run",
+    "mutation-report-ui": "cross-env ./node_modules/http-server/bin/http-server ./reports/mutation/html/ --cors -a localhost -p 8089",
     "mutate-kill-rate-check": "node CI/scripts/mutateRate.js",
     "sonar-check": "node CI/scripts/sonar.js",
     "build": "node build/build.js"
