--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "vue-awesome": "^3.5.1",
     "vue-i18n": "^8.11.1",
     "vue-notification": "^1.3.16",
+    "vue-owl-carousel": "^2.0.3",
     "vue-router": "^3.0.6",
     "vuex": "^3.1.0"
   },
