--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "start": "node build/dev-server.js",
     "format": "cross-env ./node_modules/.bin/prettier --write '{src,static,test}/**/*'",
     "format-check": "cross-env ./node_modules/.bin/prettier --check '{src,static,test}/**/*'",
+    "ut": "cross-env BABEL_ENV=test karma start test/unit/karma.conf.js --single-run",
     "unit-tests": "cross-env BABEL_ENV=test karma start test/unit/karma.conf.js --single-run",
     "unit-coverage-ui": "cross-env ./node_modules/http-server/bin/http-server ./reports/coverage/util/lcov-report/ --cors -a localhost -p 8088",
     "store-tests": "cross-env BABEL_ENV=test karma start test/store/karma.conf.js --single-run",
+    "it": "cross-env BABEL_ENV=test karma start test/store/karma.conf.js --single-run",
     "store-coverage-ui": "cross-env ./node_modules/http-server/bin/http-server ./reports/coverage/store/lcov-report/ --cors -a localhost -p 8088",
     "tests": "npm run unit-tests && npm run store-tests",
     "coverage-check": "cross-env node CI/scripts/coverage.js",
