--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "format": "cross-env ./node_modules/.bin/prettier --write '{src,test}/**/*'",
+    "format-check": "cross-env ./node_modules/.bin/prettier --check '{src,test}/**/*'",
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "test:unit": "vue-cli-service test:unit",
@@ -29,7 +31,9 @@
     "@vue/cli-service": "^4.0.0",
     "@vue/test-utils": "1.0.0-beta.29",
     "chromedriver": "78",
+    "cross-env": "^6.0.3",
     "geckodriver": "^1.19.0",
+    "prettier": "^1.19.1",
     "sass": "^1.19.0",
     "sass-loader": "^8.0.0",
     "vue-cli-plugin-i18n": "^0.6.0",
