--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "format-check": "cross-env ./node_modules/.bin/prettier --check '{src,test}/**/*'",
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "test:unit": "vue-cli-service test:unit",
+    "test:unit": "vue-cli-service test:unit --coverage",
     "test:e2e": "vue-cli-service test:e2e",
     "i18n:report": "vue-cli-service i18n:report --src './src/**/*.?(js|vue)' --locales './public/locales/*.json'"
   },
