--- a/package.json
+++ b/package.json
@@ -54,6 +54,14 @@
     "last 2 versions"
   ],
   "jest": {
-    "preset": "@vue/cli-plugin-unit-jest"
+    "preset": "@vue/cli-plugin-unit-jest",
+    "coverageThreshold": {
+      "global": {
+        "branches": 100,
+        "functions": 100,
+        "lines": 80,
+        "statements": 80
+      }
+    }
   }
 }
