--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "test:unit": "vue-cli-service test:unit --coverage",
-    "test:e2e": "vue-cli-service test:e2e",
+    "test:e2e": "vue-cli-service test:e2e --mode e2e-mock",
     "format": "cross-env ./node_modules/.bin/prettier --write '{src,test}/**/*'",
     "format-check": "cross-env ./node_modules/.bin/prettier --check '{src,test}/**/*'",
     "i18n:report": "vue-cli-service i18n:report --src './src/**/*.?(js|vue)' --locales './public/locales/*.json'"
