--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "cross-env": "^6.0.3",
     "geckodriver": "^1.19.0",
     "jsonwebtoken": "^8.5.1",
+    "mockserver": "^3.1.1",
     "prettier": "^1.19.1",
     "sass": "^1.19.0",
     "sass-loader": "^8.0.0",
