--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "boilerplate",
   "version": "3.0.0",
+  "author": "TBalint19 <tothbalint719@gmail.com>",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -9,6 +10,7 @@
     "test:e2e": "vue-cli-service test:e2e --mode e2e-mock",
     "format": "cross-env ./node_modules/.bin/prettier --write '{src,test}/**/*'",
     "format-check": "cross-env ./node_modules/.bin/prettier --check '{src,test}/**/*'",
+    "coverage-ui": "cross-env ./node_modules/http-server/bin/http-server ./coverage/lcov-report/ --cors -a localhost -p 8088 -o",
     "i18n:report": "vue-cli-service i18n:report --src './src/**/*.?(js|vue)' --locales './public/locales/*.json'"
   },
   "dependencies": {
@@ -36,11 +38,13 @@
     "chromedriver": "78",
     "cross-env": "^6.0.3",
     "geckodriver": "^1.19.0",
+    "http-server": "^0.12.0",
     "jsonwebtoken": "^8.5.1",
     "mockserver": "^3.1.1",
     "prettier": "^1.19.1",
     "sass": "^1.19.0",
     "sass-loader": "^8.0.0",
+    "sonarqube-scanner": "^2.5.0",
     "vue-cli-plugin-i18n": "^0.6.0",
     "vue-cli-plugin-vuetify": "^2.0.2",
     "vue-template-compiler": "^2.6.10",
