--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "vuex": "^3.0.1"
   },
   "devDependencies": {
+    "@fortawesome/fontawesome-free": "^5.11.2",
     "@vue/cli-plugin-babel": "^4.0.0",
     "@vue/cli-plugin-e2e-nightwatch": "^4.0.0",
     "@vue/cli-plugin-pwa": "^4.1.1",
