timeout based on env

--- a/.env.e2e-mock
+++ b/.env.e2e-mock
@@ -1,4 +1,6 @@
 VUE_APP_USER_SERVICE_URL=http://localhost:19791
 VUE_APP_PACKAGE_SERVICE_URL=http://localhost:19791
 
+VUE_APP_E2E_DEMO_MODE=true
+
 NODE_ENV=production
