--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "test:unit": "vue-cli-service test:unit --coverage",
-    "test:e2e": "vue-cli-service test:e2e --mode e2e-mock",
+    "test:e2e": "vue-cli-service test:e2e --mode e2e-mock --headless",
+    "demo": "vue-cli-service test:e2e --mode e2e-mock",
     "format": "cross-env ./node_modules/.bin/prettier --write '{src,test}/**/*'",
     "format-check": "cross-env ./node_modules/.bin/prettier --check '{src,test}/**/*'",
     "coverage-ui": "cross-env ./node_modules/http-server/bin/http-server ./coverage/lcov-report/ --cors -a localhost -p 8088 -o",
