--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
     "format": "cross-env ./node_modules/.bin/prettier --write '{src,test}/**/*'",
     "format-check": "cross-env ./node_modules/.bin/prettier --check '{src,test}/**/*'",
     "coverage-ui": "cross-env ./node_modules/http-server/bin/http-server ./coverage/lcov-report/ --cors -a localhost -p 8088 -o",
-    "i18n:report": "vue-cli-service i18n:report --src './src/**/*.?(js|vue)' --locales './public/locales/*.json'"
+    "i18n:report": "vue-cli-service i18n:report --src './src/**/*.?(js|vue)' --locales './public/locales/*.json'",
+    "sonar-check": "node CI/sonar",
+    "ci": "npm run format-check && npm run i18n:report && npm run test:unit && npm run test:e2e && npm run sonar-check",
+    "cd": "node CD",
+    "cicd": "npm run ci && npm run cd"
   },
   "dependencies": {
     "axios": "^0.19.0",
@@ -64,10 +68,10 @@
     "preset": "@vue/cli-plugin-unit-jest",
     "coverageThreshold": {
       "global": {
-        "branches": 100,
-        "functions": 100,
-        "lines": 80,
-        "statements": 80
+        "branches": 20,
+        "functions": 20,
+        "lines": 20,
+        "statements": 20
       }
     }
   }
