--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 VUE_APP_I18N_LOCALE=en
 VUE_APP_I18N_FALLBACK_LOCALE=en
 
+VUE_APP_BASE_URL=http://localhost:8080
 VUE_APP_USER_SERVICE_URL=https://api-drbaranyi.sloppy.zone
 VUE_APP_PACKAGE_SERVICE_URL=http://localhost:4000
