--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "^0.19.0",
     "core-js": "^3.3.2",
     "lodash": "^4.17.15",
+    "lutzvue": "^1.0.0",
     "prerender-spa-plugin": "^3.4.0",
     "register-service-worker": "^1.6.2",
     "vue": "^2.6.10",
