--- a/package.json
+++ b/package.json
@@ -12,9 +12,8 @@
     "format": "cross-env ./node_modules/.bin/prettier --write '{src,test}/**/*'",
     "format-check": "cross-env ./node_modules/.bin/prettier --check '{src,test}/**/*'",
     "coverage-ui": "cross-env ./node_modules/http-server/bin/http-server ./coverage/lcov-report/ --cors -a localhost -p 8088 -o",
-    "i18n:report": "vue-cli-service i18n:report --src './src/**/*.?(js|vue)' --locales './public/locales/*.json'",
     "sonar-check": "node CI/sonar",
-    "ci": "npm run format-check && npm run test:unit && npm run test:e2e && npm run sonar-check && npm run i18n:report && npm audit",
+    "ci": "npm run format-check && npm run test:unit && npm run test:e2e && npm run sonar-check && npm audit",
     "cd": "npm run build && node CD",
     "cicd": "npm run ci && npm run cd"
   },
@@ -42,7 +41,7 @@
     "@vue/cli-service": "^4.0.0",
     "@vue/test-utils": "1.0.0-beta.29",
     "axios-mock-adapter": "^1.17.0",
-    "chromedriver": "78",
+    "chromedriver": "80",
     "cross-env": "^6.0.3",
     "http-server": "^0.12.0",
     "jsonwebtoken": "^8.5.1",
