--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-VUE_APP_I18N_LOCALE=en
-VUE_APP_I18N_FALLBACK_LOCALE=en
+VUE_APP_I18N_LOCALE=hu
+VUE_APP_I18N_FALLBACK_LOCALE=hu
 
 VUE_APP_BASE_URL=http://localhost:8080
 VUE_APP_USER_SERVICE_URL=https://api-drbaranyi.sloppy.zone
