--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "test:unit": "vue-cli-service test:unit --coverage",
     "test:e2e": "vue-cli-service test:e2e --mode e2e-mock --headless",
     "demo": "vue-cli-service test:e2e --mode e2e-mock",
-    "format": "cross-env ./node_modules/.bin/prettier --write '{src,test}/**/*'",
-    "format-check": "cross-env ./node_modules/.bin/prettier --check '{src,test}/**/*'",
+    "format": "cross-env ./node_modules/.bin/prettier --write '{src,test,scripts}/**/*'",
+    "format-check": "cross-env ./node_modules/.bin/prettier --check '{src,test,scripts}/**/*'",
     "coverage-ui": "cross-env ./node_modules/http-server/bin/http-server ./coverage/lcov-report/ --cors -a localhost -p 8088 -o",
     "sonar-check": "node CI/sonar",
     "ci": "npm run format-check && npm run test:unit && npm run test:e2e && npm run sonar-check && npm audit",
