--- a/.env
+++ b/.env
@@ -4,3 +4,7 @@ VUE_APP_I18N_FALLBACK_LOCALE=hu
 VUE_APP_BASE_URL=http://localhost:8080
 VUE_APP_USER_SERVICE_URL=https://api-drbaranyi.sloppy.zone
 VUE_APP_PACKAGE_SERVICE_URL=http://localhost:4000
+
+VUE_APP_GOOGLE_CLIENT_ID=73794645273-0u80l3rd9d8e32ogfp6hbhhhqji28rfk.apps.googleusercontent.com
+VUE_APP_GOOGLE_CLIENT_SECRET=WZQdyFm-STgwpmXAqkF6H1P8
+VUE_APP_GOOGLE_REDIRECT_URI=http://localhost:8080/login
